Changelog for Writer2LaTeX version 0.5 -> 1.0

---------- version 1.0 beta ----------

[w2l] Bugfix: Fixed crash for tables with fewer columns than rows

---------- version 0.9.4 -----------

[w2l] Added sample LaTeX configuration for Google Docs from Elefterios Stamatogiannakis

[w2x] Added MathML named entites table from Bruno Mascret

[all] Bugfix: Locked controls are now updated correctly when the dialog is displayed

[w2l] New backed xetex (initial prototype)

[c2x] Bugfix: Corrected wrong calculation of column number for columns with two letters
  (affected apply_print_ranges=true)

[c2x] Bugfix: Ensure that we always export a document, even if there are no defined
  print ranges (affected apply_print_ranges=true)

[c2x] Bugfix: Now also exports uplink for spreadsheets

[w2l] Bugfix: No longer incorrectly assume math mode when exporting plain text

[all] Added support for the new Writer notes/annotations (which now can contain several
  formatted paragraphs rather than a single, plain text paragraph)

[all] Added russian and ukrainian translations from Volodymyr Volkov

[all] Bugfix: Removed PreferredFilter propery from type definitions (makes sense
  only for import filters)

[all] Changed unix startscript: By default assume that w2l and writer2latex are
  in the same directory (thus using dirname $0), and assume that the java executable
  is either in the PATH or the location is defined by JAVA_HOME
  (which these assumptions manual editing of the script is usually not required)

[all] Added french translation from Jacques Lamoine

[w2l] The option simple_table_limit now refers to the *total* width of the table
  measured in characters rather than the width of individual cells

[w2x] Bugfix: The position and dimensions of a frame is now calculated correctly
  (previously the size of margins, borders and padding was not taken into account)

[w2l] The inputencoding utf8 now uses the LaTeX standard rather than ucs.sty