@@ -2,5 +2,5 @@
 <description xmlns="http://openoffice.org/extensions/description/2006"
              xmlns:d="http://openoffice.org/extensions/description/2006">
   <identifier value="org.openoffice.da.writer2latex.xhtml-config-sample.oxt" />
-  <version value="0.9.4" />
+  <version value="1.0" />
 </description> 
